# Project_2

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app1/: CMakeLists.txt  app1.cpp
src/app2/: CMakeLists.txt  app2.cpp
src/libs/: CMakeLists.txt
src/libs/A/: CMakeLists.txt  math_lib.cpp  math_lib.h
src/libs/B/: CMakeLists.txt  data_structure_lib.cpp  data_structure_lib.h
